pkg/lang/testdata/ub/stack-values/invalid/input-var-reference.ub
factory: {
  inputs: { x: var.other }
}
